Made the project's tasks

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,25 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+  <div class="header">
+    <h1>Rafael Pacheco Ribeiro</h1>
+    <h2>Software Developer</h2>
+  </div>
+  <div class="tagline">
+    <h3>Here's what I do: I'm currently studying hard to became a computer programmer, passionate about coding with HTML, Javascript and Python</h3>
+  </div>
+  <div class="skills">
+    <h3>My set of skills:</h3>
+    <p>Technologies I really like to work with</p>
+    <ul>
+      <li>HTML</li>
+      <li>Javascript</li>
+      <li>Python</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Contact me!</h3>
+    <p>In <a href="http://www.facebook.com/rapachecobeiro">facebook</a> or <a href="https://github.com/rapacheco">Github</a></p>
+  </div>
 </body>
 </html>
