--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
     <h2>Software Developer</h2>
   </div>
   <div class="tagline">
-    <h3>Here's what I do: I'm currently studying hard to became a computer programmer, passionate about coding with HTML, Javascript and Python</h3>
+    <h3>Here's what I do:</h3>
+    <p>I'm currently studying hard to became a computer programmer, passionate about coding with HTML, Javascript and Python</p>
   </div>
   <div class="skills">
     <h3>My set of skills:</h3>
